--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,13 @@
         "service_worker": "src/background.ts"
     },
     "action": {
-        "default_title": "Search Tabs"
+        "default_title": "Search Tabs",
+        "default_icon": "icons/icon.svg"
     },
     "icons": {
+        "16": "icons/icon.svg",
+        "32": "icons/icon.svg",
+        "48": "icons/icon.svg",
         "128": "icons/icon.svg"
     },
     "content_scripts": [
